[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-postgres-rpc-server"
description = "PostgreSQL Based RPC Server for Solana"
version = "1.10.0"
repository = "https://github.com/solana-labs/solana-postgres-rpc-server"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-postgres-rpc-server"
default-run = "solana-postgres-rpc-server"

[dependencies]
clap = "2.33.1"
jsonrpc-server-utils= "18.0.0"
log = "0.4.14"
serde = "1.0.133"
serde_json = "1.0.74"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec", "compat"] }