[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-postgres-rpc-server"
description = "PostgreSQL Based RPC Server for Solana"
version = "1.10.0"
repository = "https://github.com/solana-labs/solana-postgres-rpc-server"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-postgres-rpc-server"
default-run = "solana-postgres-rpc-server"

[dependencies]
clap = "2.33.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc", "ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-server-utils= "18.0.0"
log = "0.4.14"
num_cpus = "1.13.1"
openssl = { version = "0.10" }
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.2", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
serde = "1.0.133"
serde_json = "1.0.74"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec", "compat"] }
solana-account-decoder = { version = "=1.9.5" }
solana-client = { version = "=1.9.5" }
solana-clap-utils = { version = "=1.9.5" }
solana-logger = { version = "=1.9.5" }
solana-net-utils = { version = "=1.9.5" }
solana-sdk = { version = "=1.9.5" }
solana-accountsdb-plugin-postgres = {version = "=1.9.5"}
thiserror = "1.0.30"

[target."cfg(unix)".dependencies]
libc = "0.2.115"
signal-hook = "0.3.13"