[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-postgres-rpc-server"
description = "PostgreSQL Based RPC Server for Solana"
version = "1.10.0"
repository = "https://github.com/solana-labs/solana-postgres-rpc-server"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-postgres-rpc-server"
default-run = "solana-postgres-rpc-server"

[dependencies]
base64 = "0.12.3"
bb8 = "0.7.1"
bb8-postgres = { version = "0.7.0" }
bs58 = "0.4.0"
clap = "2.33.1"
chrono = { version = "0.4.11", features = ["serde"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc", "ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-server-utils= "18.0.0"
log = "0.4.14"
native-tls = "0.2.8"
num_cpus = "1.13.1"
openssl = { version = "0.10" }
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
postgres-native-tls = { version = "0.5.0", features = ["runtime"] }
postgres-types = { version = "0.2.2", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
solana-accountsdb-plugin-postgres = {version = "=1.9.6"}
solana-account-decoder = { version = "=1.9.6" }
solana-client = { version = "=1.9.6" }
solana-clap-utils = { version = "=1.9.6" }
solana-logger = { version = "=1.9.6" }
solana-net-utils = { version = "=1.9.6" }
solana-perf = { version = "=1.9.6" }
solana-sdk = { version = "=1.9.6" }
solana-runtime = { version = "=1.9.6" }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["runtime"] }
tokio-util = { version = "0.6", features = ["codec", "compat"] }

[target."cfg(unix)".dependencies]
libc = "0.2.115"
signal-hook = "0.3.13"